--- a/goit/javascript/lesson_21-22/package.json
+++ b/goit/javascript/lesson_21-22/package.json
@@ -17,6 +17,9 @@
     "babel-preset-es2015": "^6.5.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
-    "gulp-jasmine": "^2.3.0"
+    "gulp-concat": "^2.6.0",
+    "gulp-jasmine": "^2.3.0",
+    "gulp-jasmine-phantom": "^2.1.2",
+    "gulp-uglify": "^1.5.2"
   }
 }
